--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,12 @@ wheels/
 *.pyc
 db.sqlite3
 db.sqlite3-journal
+db.sqlite3-wal
+db.sqlite3-shm
+*.sqlite3
+*.sqlite3-journal
+*.sqlite3-wal
+*.sqlite3-shm
 media/
 staticfiles/
 static_root/
